config/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: namespace-lister
  namespace: namespace-lister
  labels:
    apps: namespace-lister
spec:
  selector:
    matchLabels:
      apps: namespace-lister
  replicas: 1
  template:
    metadata:
      labels:
        apps: namespace-lister
    spec:
      # securityContext:
      #   runAsNonRoot: true
      serviceAccountName: namespace-lister
      containers:
      - image: namespace-lister:latest
        name: namespace-lister
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 10m
            memory: 64Mi
        ports:
        - containerPort: 8080
          name: http
        securityContext:
          allowPrivilegeEscalation: false
          readOnlyRootFilesystem: true
          capabilities:
            drop:
            - "ALL"
      terminationGracePeriodSeconds: 60
