config/metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: namespace-lister-metrics
  namespace: namespace-lister
spec:
  selector:
    apps: namespace-lister
  type: ClusterIP
  ports:
  - name: metrics
    targetPort: 9000
    port: 9000
