config/network-policy-egress-allow-apiserver.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: egress-allow-apiserver
  namespace: system
spec:
  egress:
  - ports:
    - port: 6443
      protocol: TCP
    to:
    - podSelector:
        matchLabels:
          component: kube-apiserver
      namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
  podSelector:
    matchLabels:
      apps: namespace-lister
  policyTypes:
  - Egress
